content no longer covering content on mobile

--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -1,27 +1,28 @@
 header.banner {
-    height: 30vh;
+    min-height: 30vh;
+    position: relative;
     background-image: url("../images/providence-rhode-island.jpg");
     background-attachment: fixed;
     background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover; 
-    position: relative;
-    margin-bottom: 20vh;
+    background-size: cover;
+    margin-bottom: 2rem;
 }
 
 .placard {
-    position: relative ;
-    min-height: 20vh;
-    background-color: rgba(200, 230, 230, 0.9);
+    min-height: 10vh;
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 2rem 4rem;
-    width: 50vw;
-    bottom: -14vh;
+    width: 60vw;
     margin: auto;
 }
 
 @media screen and (max-width: 700px) {
     .placard {
         margin: 0;
-        width: 60vw;
+        width: 100%;
+        height: 100%;
+        border: 12px solid rgba(0, 0, 0, 0.1);
+        box-sizing: border-box;
     }
 }
